Fixed front end and failing tests